[package]
name = "rsdb-postgres"
version = "0.0.1"
authors = ["Atmaram Naik <naik.atmaram@gmail.com>"]
edition = "2018"

[dependencies]
rsdb={path="../rsdb"}
async-trait = "0.1.51"
tokio = {version = "1.10.1", features=["full"]}
tokio-postgres = "0.7.2"
lazy_static = "1.4.0"
ctor="0.1.20"
sqlparser = "0.10.0"
futures-util ="0.3.17"
